@@ -1,3 +1,8 @@
+2003-10-06  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* clist.c (update_score_cell): We shouldn't be trying to free
+	something we didn't malloc. Fixes bug #123735.
+
 2003-10-01  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* yahtzee.c (calc_random): i18n fix, see bug #123586.
